# placeholder-image-api

./: .gitignore  API_DIRECTORY_TEMPLATES.md  LICENSE  MARKETING_TEMPLATES.md  PRODUCTHUNT.md  PROJECT_MEMORY.md  README.md  app.py  cache_cleanup.py  check_deps.py  devto-article.md  generate_alternatives.py  generate_seo_pages.py  gumroad_webhook.py  install_deps.py  nginx-placeholder.conf  placeholder-api.service
npm-package/: README.md  index.js  package.json
pip-package/: README.md  pyproject.toml
pip-package/placeholder_img/: __init__.py  client.py
pip-package/placeholder_img.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: sitemap.xml
static/alternatives/: dummyimage-com.html  fakeimg-pl.html  fillscreen-com.html  index.html  lorempixel-com.html  placebeast-com.html  placehold-co.html  placehold-it.html  placeholder-com.html  placeimg-com.html  placekitten-com.html
static/sizes/: index.html
surge-site/: index.html
